dfir_rs/tests/compile-fail/stable/surface_partition_port_extramissing.stderr
error: Argument specifying the output ports in `partition(..)` does not contain extra port `d`: (unknown:14:21) (1/2).
 --> tests/compile-fail-stable/surface_partition_port_extramissing.rs:5:63
  |
5 |         my_partition = source_iter(0..10) -> partition(|item, [a, b, c]| {
  |                                                               ^^^^^^^^^

error: Port `d` not found in the arguments specified in `partition(..)`'s closure: (unknown:5:62) (2/2).
  --> tests/compile-fail-stable/surface_partition_port_extramissing.rs:14:22
   |
14 |         my_partition[d] -> for_each(std::mem::drop);
   |                      ^

error: `partition(..)` closure argument `a` missing corresponding output port.
 --> tests/compile-fail-stable/surface_partition_port_extramissing.rs:5:64
  |
5 |         my_partition = source_iter(0..10) -> partition(|item, [a, b, c]| {
  |                                                                ^
